# CrazySnake-QT

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
components/: qclickimage.cpp  qclickimage.h  qsliderlabel.cpp  qsliderlabel.h
scene/sceneendgame/: sceneendgame.cpp  sceneendgame.h  sceneendgame.ui
scene/scenegame/: scenegame.cpp  scenegame.h  scenegame.ui
scene/scenehelp/: scenehelp.cpp  scenehelp.h  scenehelp.ui
scene/scenemenu/: scenemenu.cpp  scenemenu.h  scenemenu.ui
